# evol-mod-glfw

./: .gitignore  README.md  meson.build  module.lua
include/: ev_imgl.h
include/input/: mod_input.h
meta/: evmod.configvars  evmod.events  evmod.namespaces  evmod.types
src/: ev_imgl.c  mod.c
src/input/: mod_input.c
src/input/script_api/: script_api.c  script_api.h  script_api.lua
src/lua/: script_api.lua
subprojects/: evol.wrap
